# embrace-android-sdk

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  NOTICE.md  README.md  UPGRADING.md  build.gradle  build.gradle.kts  codecov.yml  embrace-config-schema.json  envelope.yaml  gradle.properties  gradlew  settings.gradle  settings.gradle.kts  sonar-project.properties
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  fetch-robolectric-dependencies.sh
buildSrc/: README.md  build.gradle.kts
docs/: index.html  navigation.html  package-list  version.txt
embrace-android-api/: README.md  build.gradle.kts  embrace-proguard.cfg  lint-baseline.xml
embrace-android-compose/: build.gradle.kts
embrace-android-config/: README.md  build.gradle.kts
embrace-android-config-fakes/: README.md  build.gradle.kts
embrace-android-core/: README.md  build.gradle.kts  embrace-proguard.cfg  gradle.properties  lint-baseline.xml
embrace-android-delivery/: README.md  build.gradle.kts
embrace-android-delivery-fakes/: README.md  build.gradle.kts
embrace-android-envelope/: README.md  build.gradle.kts  lint-baseline.xml
embrace-android-fcm/: build.gradle.kts
embrace-android-features/: README.md  build.gradle.kts
embrace-android-huc/: build.gradle.kts
embrace-android-infra/: README.md  build.gradle.kts  lint-baseline.xml
embrace-android-instrumentation-androidx-navigation/: build.gradle.kts
embrace-android-instrumentation-anr/: README.md  build.gradle.kts  gradle.properties
embrace-android-instrumentation-api/: README.md  build.gradle.kts  embrace-proguard.cfg
embrace-android-instrumentation-api-fakes/: README.md  build.gradle.kts  lint-baseline.xml
embrace-android-instrumentation-app-exit-info/: README.md  build.gradle.kts
embrace-android-instrumentation-compose-navigation/: build.gradle.kts  lint-baseline.xml
embrace-android-instrumentation-compose-tap/: README.md  build.gradle.kts  lint-baseline.xml
embrace-android-instrumentation-crash-jvm/: README.md  build.gradle.kts  gradle.properties
embrace-android-instrumentation-crash-ndk/: README.md  build.gradle.kts  embrace-proguard.cfg  gradle.properties
embrace-android-instrumentation-fcm/: README.md  build.gradle.kts  embrace-proguard.cfg
embrace-android-instrumentation-huc/: build.gradle.kts  embrace-proguard.cfg
embrace-android-instrumentation-huc-lite/: README.md  build.gradle.kts
embrace-android-instrumentation-jvm-crash/: README.md  build.gradle.kts
embrace-android-instrumentation-navigation/: build.gradle.kts
embrace-android-sdk/src/main/cpp/: CMakeLists.txt  CrashSampleClass.cpp  CrashSamplesImplClass.cpp  anr.c  base_64_encoder.c  cpuinfo.c  emb_ndk_crash_samples.cpp  emb_ndk_manager.c  emb_ndk_manager.h  file_marker.h  file_writer.c  file_writer.h  jni_util.h  stack_frames.h  utilities.c  utilities.h
embrace-android-sdk/src/main/cpp/anr/: anr.c  anr.h  emb_anr_manager.c
embrace-android-sdk/src/main/cpp/jnibridge/: emb_ndk_manager.c  emb_ndk_manager.h
embrace-android-sdk/src/main/cpp/safejni/: jni_util.c  safe_jni.c  safe_jni.h
embrace-android-sdk/src/main/cpp/sampler/: emb_timer.c  emb_timer.h  sampler_structs.h  sampler_unwinder_stack.cpp  sampler_unwinder_stack.h  sampler_unwinder_unwind.c  sampler_unwinder_unwind.h  stacktrace_sampler.c  stacktrace_sampler.h  stacktrace_sampler_jni.c  unwinder_dlinfo.c  unwinder_dlinfo.h
embrace-android-sdk/src/main/cpp/schema/: unwind_state.h
embrace-android-sdk/src/main/cpp/serializer/: file_writer.c  file_writer.h
embrace-android-sdk/src/main/cpp/signals/: signal_utils.c  signals_c.c  signals_c.h  signals_cpp.cpp  signals_cpp.h
embrace-android-sdk/src/main/cpp/unwinders/: stack_unwinder.cpp  unwinder.c  unwinder.h  unwinder_stack.cpp  unwinder_stack.h
embrace-android-sdk/src/main/cpp/utils/: cpuinfo.c  string_utils.c  string_utils.h  system_clock.h  utilities.c  utilities.h
embrace-android-sdk/src/test/cpp/: CMakeLists.txt  main.c
embrace-android-sdk/src/test/cpp/include/greatest/: greatest.h
embrace-android-sdk/src/test/cpp/testcases/sampler/: test_sampler_jni_call.c  test_sampler_stack_unwind.c  test_stacktrace_sampler.c  test_unwinder_dlinfo.c
embrace-android-sdk/src/test/cpp/testcases/serializer/: test_file_writer.c
embrace-android-sdk/src/test/cpp/testcases/utilities/: test_string_utils.c
embrace-lint/: README.md  (+2 more)
(+6456 files in other folders)
